mobile and spacing fixes

--- a/client/app/assets/less/inc/edit-in-place.less
+++ b/client/app/assets/less/inc/edit-in-place.less
@@ -46,3 +46,18 @@
     }
   }
 }
+
+
+@media (max-width: 880px) {
+  .edit-in-place {
+    .rd-form-control {
+      width: 50vw;
+    }
+
+    &.active {
+      textarea.rd-form-control {
+        width: 50vw;
+      }
+    }
+  }
+}
